crates/fleet-core/src/mode/snapshots/fleet_core__mode__definition__tests__all_variants.snap
---
source: crates/fleet-core/src/mode/definition.rs
expression: json
---
{
  "steps": [
    {
      "action": {
        "type": "look",
        "yaw": -90.5,
        "pitch": 12.25
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "rotate_random",
        "max_yaw": 30.0,
        "max_pitch": 10.0
      },
      "schedule": {
        "type": "every",
        "interval_ms": 45000,
        "jitter_ms": 75000
      },
      "probability": 100
    },
    {
      "action": {
        "type": "jump"
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "sneak",
        "on": true
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "swing_arm"
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "use_item"
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "hold_use",
        "on": true
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "attack_facing_entity"
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "select_hotbar_slot",
        "slot": 8
      },
      "schedule": {
        "type": "at_start"
      },
      "probability": 100
    },
    {
      "action": {
        "type": "send_chat",
        "message": "/spawn"
      },
      "schedule": {
        "type": "every",
        "interval_ms": 60000,
        "jitter_ms": 0
      },
      "probability": 25
    }
  ]
}
